@@ -70,10 +70,11 @@ ENDIF(UNIX)
 
 # Install library
 INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
-	DESTINATION ${OPENJPEG_INSTALL_LIB_DIR}
+  EXPORT OpenJPEGTargets
+	DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
 )
 
 # Install includes files
 INSTALL(FILES openjpeg.h
-	DESTINATION ${OPENJPEG_INSTALL_INCLUDE_DIR}
+	DESTINATION ${OPENJPEG_INSTALL_INCLUDE_DIR} COMPONENT Headers
 )
